Update hr color to grey

--- a/main.css
+++ b/main.css
@@ -43,8 +43,5 @@ table {
 }
 
 hr {
-  border-color: white;
-  color: white;
-  background-color: white;
-  border-style: solid;
+  color: #eeeeee;
 }
